force-app/main/default/objects/sked__Attendee__c/sked__Attendee__c.object-meta.xml
<CustomObject>
    <description>A person who may attend a group event job, along with information about their attendance.</description>
    <label>Attendee</label>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>