force-app/main/default/objects/sked__Attendee__c/fields/sked__Contact__c.field-meta.xml
<CustomField>
    <fullName>sked__Contact__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The person who will attend the event.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>