force-app/main/default/objects/sked__Attendee__c/fields/sked__Job__c.field-meta.xml
<CustomField>
    <fullName>sked__Job__c</fullName>
    <description>A job that represents a group event.</description>
    <label>Job</label>
    <referenceTo>sked__Job__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>