force-app/main/default/objects/sked__Attendee__c/fields/sked__Status__c.field-meta.xml
<CustomField>
    <fullName>sked__Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
                <default>true</default>
                <label>Attended</label>
            </value>
            <value>
                <fullName>Absent</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>