force-app/main/default/objects/sked__Attendee__c/fields/sked__Time_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>sked__Time_Cancelled__c</fullName>
    <label>Time Cancelled</label>
    <type>DateTime</type>
</CustomField>