force-app/main/default/objects/sked__Attendee__c/validationRules/sked__CancelTimestamp.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__CancelTimestamp</fullName>
    <active>true</active>
    <description>A cancelled Attendee must have a cancellation timestamp.</description>
    <errorConditionFormula>AND( ISPICKVAL(sked__Status__c, &quot;Cancelled&quot;), ISNULL(sked__Time_Cancelled__c) )</errorConditionFormula>
    <errorDisplayField>sked__Time_Cancelled__c</errorDisplayField>
    <errorMessage>Time Cancelled must be set if Status is Cancelled.</errorMessage>
</ValidationRule>